# FLDServer

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  MultiCPackConfig.cmake  README.md  build.py  fldserver_config.h.in  format.py  requirements.txt
fldserver/: CMakeLists.txt  buildflags.h  main.cc  test.cc
fldserver/base/: CMakeLists.txt  PRESUBMIT.py  as_const.h  at_exit.cc  at_exit.h  atomic_ref_count.h  atomic_sequence_num.h  atomicops.h  atomicops_internals_atomicword_compat.h  atomicops_internals_portable.h  auto_reset.h  barrier_closure.cc  barrier_closure.h  base64.cc  base64.h  base64url.cc  base64url.h  base_paths.cc  base_paths.h  base_paths_posix.cc  base_paths_posix.h  base_paths_win.cc  base_paths_win.h  base_switches.cc  base_switches.h  big_endian.cc  big_endian.h  bind.h  bind_internal.h  bind_post_task.h  bind_post_task_internal.h  bit_cast.h  bits.cc  bits.h  build_time.cc  build_time.h  callback.h  callback_forward.h  callback_helpers.cc  callback_helpers.h  (+130 more)
fldserver/base/ced/: CMakeLists.txt
fldserver/base/cityhash/: CMakeLists.txt  city.cc  city.h
fldserver/base/cityhash_v103/: CMakeLists.txt
fldserver/base/containers/: CMakeLists.txt  adapters.h  buffer_iterator.h  checked_iterators.h  checked_range.h  circular_deque.h  contains.h  contiguous_iterator.h  fixed_flat_map.h  fixed_flat_set.h  flat_map.h  flat_set.h  flat_tree.cc  flat_tree.h  id_map.h  intrusive_heap.cc  intrusive_heap.h  linked_list.cc  linked_list.h  mru_cache.h  queue.h  ring_buffer.h  small_map.h  span.h  stack.h  stack_container.h  unique_ptr_adapters.h  util.h  vector_buffer.h
fldserver/base/crypto/: CMakeLists.txt  aead.cc  aead.h  capi_util.cc  capi_util.h  chaps_support.cc  chaps_support.h  crypto_export.h  ec_private_key.cc  ec_private_key.h  ec_signature_creator.cc  ec_signature_creator.h  ec_signature_creator_impl.cc  ec_signature_creator_impl.h  encryptor.cc  encryptor.h  hkdf.cc  hkdf.h  hmac.cc  hmac.h  mac_security_services_lock.cc  mac_security_services_lock.h  nss_crypto_module_delegate.h  nss_key_util.cc  nss_key_util.h  nss_util.cc  nss_util.h  nss_util_chromeos.cc  nss_util_internal.h  openssl_util.cc  openssl_util.h  p224_spake.cc  p224_spake.h  random.cc  random.h  rsa_private_key.cc  rsa_private_key.h  scoped_capi_types.h  scoped_nss_types.h  secure_hash.cc  (+14 more)
fldserver/base/debug/: CMakeLists.txt  activity_analyzer.cc  activity_analyzer.h  activity_tracker.cc  activity_tracker.h  alias.cc  alias.h  asan_invalid_access.cc  asan_invalid_access.h  close_handle_hook_win.cc  close_handle_hook_win.h  crash_logging.cc  crash_logging.h  debugger.cc  debugger.h  debugger_posix.cc  debugger_win.cc  dump_without_crashing.cc  dump_without_crashing.h  elf_reader.cc  elf_reader.h  gdi_debug_util_win.cc  gdi_debug_util_win.h  invalid_access_win.cc  invalid_access_win.h  leak_annotations.h  proc_maps_linux.cc  proc_maps_linux.h  profiler.cc  profiler.h  stack_trace.cc  stack_trace.h  stack_trace_posix.cc  stack_trace_win.cc  task_trace.cc  task_trace.h
fldserver/base/double_conversion/: CMakeLists.txt  bignum-dtoa.cc  bignum-dtoa.h  bignum.cc  bignum.h  cached-powers.cc  cached-powers.h  diy-fp.h  double-to-string.cc  double-to-string.h  fast-dtoa.cc  fast-dtoa.h  fixed-dtoa.cc  fixed-dtoa.h  ieee.h  string-to-double.cc  string-to-double.h  strtod.cc  strtod.h  utils.h
fldserver/base/dynamic_annotations/: CMakeLists.txt  dynamic_annotations.c  dynamic_annotations.h
fldserver/base/files/: CMakeLists.txt  dir_reader_fallback.h  dir_reader_linux.h  dir_reader_posix.h  file.cc  file.h  file_descriptor_watcher_posix.cc  file_descriptor_watcher_posix.h  file_enumerator.cc  file_enumerator.h  file_enumerator_posix.cc  file_enumerator_win.cc  file_path.cc  file_path.h  file_path_constants.cc  file_path_watcher.cc  file_path_watcher.h  file_path_watcher_linux.cc  file_path_watcher_linux.h  file_path_watcher_stub.cc  file_path_watcher_win.cc  file_posix.cc  file_proxy.cc  file_proxy.h  file_tracing.cc  file_tracing.h  file_util.cc  file_util.h  file_util_linux.cc  file_util_posix.cc  file_util_win.cc  file_win.cc  important_file_writer.cc  important_file_writer.h  important_file_writer_cleaner.cc  important_file_writer_cleaner.h  memory_mapped_file.cc  memory_mapped_file.h  memory_mapped_file_posix.cc  memory_mapped_file_win.cc  (+5 more)
fldserver/base/functional/: identity.h  invoke.h  not_fn.h
fldserver/base/hash/: CMakeLists.txt  hash.cc  hash.h  legacy_hash.cc  legacy_hash.h  md5.h  md5_boringssl.cc  md5_boringssl.h  md5_constexpr.h  md5_constexpr_internal.h  sha1.h  sha1_boringssl.cc  sha1_boringssl.h
fldserver/base/i18n/: CMakeLists.txt  base_i18n_export.h  base_i18n_switches.cc  base_i18n_switches.h  break_iterator.cc  break_iterator.h  build_utf8_validator_tables.cc  case_conversion.cc  case_conversion.h  char_iterator.cc  char_iterator.h  character_encoding.cc  character_encoding.h  encoding_detection.cc  encoding_detection.h  file_util_icu.cc  file_util_icu.h  i18n_constants.cc  i18n_constants.h  icu_string_conversions.cc  icu_string_conversions.h  icu_util.cc  icu_util.h  message_formatter.cc  message_formatter.h  number_formatting.cc  rtl.cc  rtl.h  (+14 more)
fldserver/copts/: FLDServerConfigureCopts.cmake  copts.py  generate_copts.py
fldserver/landmark_detection/: CMakeLists.txt  concurrent_queue.h  csv_recorder.cc  csv_recorder.h  detection_manager.cc  detection_manager.h  features_extractor.cc  features_extractor.h  hog_recorder.cc  hog_recorder.h  image_manipulation_helpers.h  recorder_openface.cc  recorder_openface.h  recorder_openface_parameters.cc  recorder_openface_parameters.h  sequence_capture.cc  sequence_capture.h  stdafx_ut.h
fldserver/landmark_detector/: CMakeLists.txt  features_extractor.cc  features_extractor.h  features_recorder.cc  features_recorder.h  manager.cc  manager.h  video_frame.cc  video_frame.h
fldserver/service/: CMakeLists.txt  fields_alloc.h  http_worker.cc  http_worker.h  runner.cc  runner.h  service_observer.cc  service_observer.h  session.cc  session.h  sessions_handler.cc  sessions_handler.h
(+857 files in other folders)
